redirect for photos, fix header overflow

--- a/assets/css/styles-6.scss
+++ b/assets/css/styles-6.scss
@@ -386,25 +386,16 @@ p {
 }
 
 .index-container {
-  .posts {
-    a {
-      color: #4B6A78;
-      text-decoration: underline;
-    }
-    .excerpt {
-      font-size: larger;
-      margin: 0px 14px 0px 14px;
-    }
-  }
-
   .about {
     position: relative;
     background: rgb(75, 106, 120);
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     .top {
+      width: 100%;
       height: 10px;
       background: #f5f5f5;
     }
@@ -420,36 +411,36 @@ p {
         right: 20%;
       }
     }
-    .info {
-      height: 160px;
-      width: 65%;
-      position: absolute;
 
-      margin-left: auto;
-      margin-right: auto;
-      left: 0;
-      right: 0;
+    .profile-img {
+      position: absolute;
       top: -40px;
 
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      color: #f5f5f5;
+      margin-bottom: 5px;
+      max-width: 100px;
+    }
 
+    .about-text {
+      margin: 60px 10px 10px 10px;
+
+      height: 100%;
+      display: flex;
+      align-items: center;
+
+      text-align: center;
       font-size: 1.7rem;
       font-weight: 300;
-
-      .profile-img {
-        margin-bottom: 5px;
-        max-width: 100px;
-      }
-
-      .about-text {
-        height: 100%;
-        display: flex;
-        align-items: center;
-      }
+      color: #f5f5f5;
+    }
+  }
+  .posts {
+    a {
+      color: #4B6A78;
+      text-decoration: underline;
+    }
+    .excerpt {
+      font-size: larger;
+      margin: 0px 14px 0px 14px;
     }
   }
 }
